argocd/install/service-alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-argocd-server-alb
  namespace: argocd
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
  type: NodePort
