argocd/install/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:620207451224:certificate/020cb865-79a6-4c83-b09d-ac76606903d5
    alb.ingress.kubernetes.io/group.name: ingress-group-pub-hml
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/subnets: subnet-0b7f931e939f11438, subnet-0900487959cfec998
    alb.ingress.kubernetes.io/tags: Environment=hml,Team=DevOps,Schema=internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  name: ingress-group-pub-hml  
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
  - host: argocd.hml.propagandistanc.com
    http:
      paths:
      - backend:
          service:
            name: svc-argocd-server-alb
            port:
              number: 80
        path: /
        pathType: Prefix
